--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,8 +8,12 @@
 
 @custom-variant dark (&:where(.dark, .dark *));
 
+@plugin 'daisyui';
+
 @theme {
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+    --font-TGS: 'TGSPerfectCondensed';
+    --font-Geomisans: 'Geomisans';
 
     --color-zinc-50: #fafafa;
     --color-zinc-100: #f5f5f5;
@@ -26,6 +30,16 @@
     --color-accent: var(--color-neutral-800);
     --color-accent-content: var(--color-neutral-800);
     --color-accent-foreground: var(--color-white);
+
+    --color-luckycat-100: #ccf3da;
+    --color-luckycat-200: #99e7b5;
+    --color-luckycat-300: #67dc91;
+    --color-luckycat-400: #34d06c;
+    --color-luckycat-500: #01c447;
+    --color-luckycat-600: #019d39;
+    --color-luckycat-700: #01762b;
+    --color-luckycat-800: #004e1c;
+    --color-luckycat-900: #00270e;
 }
 
 @layer theme {
@@ -64,3 +78,71 @@ select:focus[data-flux-control] {
 /* \[:where(&)\]:size-4 {
     @apply size-4;
 } */
+
+/* styles.css or any global CSS file */
+@font-face {
+    font-family: 'TGSPerfectCondensed'; /* This must match the name you used in tailwind.config.js */
+    src: url('/public/fonts/TGSPerfectCondensed.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Geomisans'; /* This must match the name you used in tailwind.config.js */
+    src: url('/public/fonts/Geomisans.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+  }
+
+.slider{
+    width: 100%;
+    height: var(--height);
+    overflow: hidden;
+    mask-image: linear-gradient(
+        to right,
+        transparent,
+        #000 10% 90%,
+        transparent
+    );
+}
+.slider .list{
+    display: flex;
+    width: 100%;
+    min-width: calc(var(--width) * var(--quantity));
+    position: relative;
+}
+.slider .list .item{
+    width: var(--width);
+    height: var(--height);
+    position: absolute;
+    left: 100%;
+    animation: autoRun 10s linear infinite;
+    transition: filter 0.5s;
+    animation-delay: calc( (10s / var(--quantity)) * (var(--position) - 1) - 10s)!important;
+}
+.slider .list .item img{
+    width: 100%;
+}
+@keyframes autoRun{
+    from{
+        left: 100%;
+    }to{
+        left: calc(var(--width) * -1);
+    }
+}
+.slider:hover .item{
+    animation-play-state: paused!important;
+    filter: grayscale(1);
+    
+    p {
+        color: white;
+        @apply ease-linear duration-700 pointer-events-none;
+    }
+}
+.slider .item:hover{
+    filter: grayscale(0);
+
+    p {
+        @apply text-luckycat-900;
+    }
+}
