Add event detail, checkout, and some fixes on migrations and models, added controller too.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,5 +1,6 @@
 @import 'tailwindcss';
 @import '../../vendor/livewire/flux/dist/flux.css';
+@source '../../vendor/masmerise/livewire-toaster/resources/views/*.blade.php';
 
 @source "../views";
 @source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
@@ -151,5 +152,15 @@ html, body {
 
     p {
         color: var(--hover, color-luckycat-900);
+    }
+}
+.slider[reverse="true"] .item{
+    animation: reversePlay 10s linear infinite;
+}
+@keyframes reversePlay{
+    from{
+        left: calc(var(--width) * -1);
+    }to{
+        left: 100%;
     }
 }
